--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,4 @@ deps=-r{toxinidir}/requirements.txt
      -r{toxinidir}/test-requirements.txt
 
 commands=
-   pytest --cov=openapi_client
+   pytest --cov=ionos_reseller_api_v2_client
